# hypercover

./: .gitignore  .replit  README.md  bulk_processor.py  company_data.json  companyfinder.py  linkedin_api_client.py  linkedin_profile_scraper.py  main.py  pyproject.toml  requirements.txt  temp_cover_letter.docx  test_linkedin_api.py
api/: cover_letter_api.py
attached_assets/: Pasted--Serving-Flask-app-main-Debug-mode-off-WARNING-This-is-a-development-server-Do-not-use-it--1736032818130.txt
generated_letters/: CL_Airbnb_Product Designer_20250106_234139.docx  CL_Asana_Frontend Developer_20250106_234140.docx  CL_Atlassian_Software Tester_20250106_234140.docx  CL_BridgeBio_Biotech Researcher_20250106_234128.docx  CL_Cisco Meraki_IT Specialist_20250106_234129.docx  CL_Cloudflare_Systems Administrator_20250106_234129.docx  CL_Crunchyroll_Content Editor_20250106_234129.docx  CL_Databricks_AI Specialist_20250106_234132.docx  CL_DoorDash_Delivery Coordinator_20250106_234140.docx  CL_Dropbox_Backend Developer_20250106_234139.docx  CL_Gusto_HR Specialist_20250106_234129.docx  CL_Instacart_Retail Analyst_20250106_234139.docx  CL_Jerry_Marketing Manager_20250106_234129.docx  CL_Lyft_Logistics Specialist_20250106_234139.docx  CL_Mode_Data Analyst_20250106_234129.docx  CL_Oscar Health_Healthcare Consultant_20250106_234129.docx  CL_Plaid_Integration Engineer_20250106_234140.docx  CL_Roblox_Software Engineer_20250106_234131.docx  CL_Salesforce_Account Executive_20250106_234129.docx  CL_Slack_Quality Assurance Engineer_20250106_234139.docx  CL_Toast_Sales Manager_20250106_234129.docx  (+8 more)
(+65 files in other folders)
