[project]
name = "repl-nix-hypercover"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "docx>=0.2.4",
    "docx2pdf>=0.1.8",
    "flask>=3.1.0",
    "linkedin-api>=2.3.1",
    "requests>=2.32.3",
    "groq>=0.13.1",
    "pypandoc>=1.14",
    "reportlab>=4.2.5",
]
